@@ -149,6 +149,9 @@ static VALUE oci8_define_by_pos(VALUE self, VALUE vposition, VALUE vbindobj)
             oci8_base_free((oci8_base_t*)oci8_get_bind(old_value));
         }
     }
+    if (bind_class->csfrm != 0) {
+        oci_lc(OCIAttrSet(obind->base.hp.ptr, OCI_HTYPE_DEFINE, (void*)&bind_class->csfrm, 0, OCI_ATTR_CHARSET_FORM, oci8_errhp));
+    }
     rb_ary_store(stmt->defns, position - 1, obind->base.self);
     oci8_unlink_from_parent((oci8_base_t*)obind);
     oci8_link_to_parent((oci8_base_t*)obind, (oci8_base_t*)stmt);
@@ -219,6 +222,9 @@ static VALUE oci8_bind(VALUE self, VALUE vplaceholder, VALUE vbindobj)
         oci8_base_t *tdo = DATA_PTR(obind->tdo);
         oci_lc(OCIBindObject(obind->base.hp.bnd, oci8_errhp, tdo->hp.tdo,
                              obind->valuep, 0, obind->u.null_structs, 0));
+    }
+    if (bind_class->csfrm != 0) {
+        oci_lc(OCIAttrSet(obind->base.hp.ptr, OCI_HTYPE_BIND, (void*)&bind_class->csfrm, 0, OCI_ATTR_CHARSET_FORM, oci8_errhp));
     }
     old_value = rb_hash_aref(stmt->binds, vplaceholder);
     if (!NIL_P(old_value)) {
